# advanced-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  eval.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_auth_rls_audit.py  0003_document_classification.py  0004_app_settings.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  graph.py  nodes.py  state.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin.py  audit.py  auth.py  chat.py  documents.py  health.py  presets.py  settings.py
backend/app/core/: config.py  db.py  logging.py  ratelimit.py  runtime_settings.py
backend/app/db/: __init__.py  models.py
backend/app/finetune/: __init__.py  dataset.py  evaluate.py
backend/app/guardrails/: __init__.py  base.py  engine.py  grounding.py  injection.py  pii.py  safety.py
backend/app/ingestion/: __init__.py  chunker.py  classifier.py  cli.py  hf_cli.py  hf_dataset.py  pdf.py  pipeline.py  presets.py  presets_cli.py
backend/app/llm/: __init__.py  base.py  factory.py  providers.py
backend/app/observability/: __init__.py  tracing.py
backend/app/rag/: __init__.py  audit.py  embedder.py  pipeline.py  reranker.py  retriever.py  web.py
backend/app/schemas/: auth.py  chat.py
backend/app/security/: __init__.py  passwords.py  seed.py  tokens.py
backend/tests/: test_agents.py  test_chunker.py  test_classifier.py  test_document_update.py  test_finetune.py  test_guardrails.py  test_health.py  test_hf_dataset.py  test_llm_abstraction.py  test_pdf.py  test_pii_mask.py  test_pipeline.py  test_presets.py  test_ratelimit.py  test_runtime_settings.py  test_security.py  test_settings_api.py
docs/: architecture.md  runbook.md  threat-model.md
docs/adr/: 0001-record-architecture-decisions.md  0002-local-gemma-on-apple-silicon.md  0003-pgvector-rls-for-rbac.md  0004-iac-as-artifact.md  0005-hybrid-retrieval.md  0006-rls-enforcement.md  0007-agentic-orchestration.md  0008-layered-guardrails.md  0009-runtime-settings-and-provider-gateway.md
frontend/: pnpm-workspace.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/presets/: page.tsx
frontend/src/app/security/: page.tsx
frontend/src/components/: DocumentPreviewModal.tsx  OnboardingTour.tsx  RoleSwitcher.tsx  Sidebar.tsx  Toggle.tsx
frontend/src/lib/: api.ts  auth.ts
infra/: README.md
infra/helm/: Chart.yaml  values.yaml
infra/helm/templates/: _helpers.tpl  backend.yaml  frontend.yaml  ingress.yaml  vllm.yaml
infra/modal/: app.py
infra/terraform/: main.tf  outputs.tf  variables.tf
ml/: README.md
ml/finetune/: lora.yaml
ml/model_cards/: gemma4-rag-lora.md
scripts/: fetch_sample_corpus.py
(+21 files in other folders)
