[project]
name = "rag-backend"
version = "0.1.0"
description = "Enterprise Agentic RAG - FastAPI backend (Gemma 4, pgvector + RLS, LangGraph, guardrails)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.18",  # required by the OAuth2 form login route
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "openai>=1.54",            # OpenAI-compatible client → Ollama / vLLM
    "httpx>=0.27",
    "structlog>=24.4",
    "tenacity>=9.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    "pyjwt>=2.10",
    "bcrypt>=4.2",
    "langgraph>=0.2",
]

[project.optional-dependencies]
# Heavy ML deps (embeddings, rerank, PDF) - installed when running ingestion/retrieval.
ml = [
    "sentence-transformers>=3.3",
    "pymupdf>=1.24",
    "datasets>=3.0",  # ingest HuggingFace text datasets (e.g. medical Q&A corpora)
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
# Optional LangFuse tracing (Phase 6). Off by default; enable with the keys set.
obs = [
    "langfuse>=2.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are called in argument defaults by design.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
